--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
           <h2 class="text-over-slide-md d-lg-none d-sm-none d-none d-md-block">Vittoria Calzados</h2>
           <h2 class="text-over-slide-mob d-sm-block d-md-none d-lg-none">Vittoria Calzados</h2>
           <div class="carousel-item active" data-bs-interval="1800">
-            <img src="img/carrousel_1.jpg" class="d-block w-100 img-fluid" alt="Zapatos - Vittoria Calzaddos" />
+            <img src="img/carrousel_1.png" class="d-block w-100 img-fluid" alt="Zapatos - Vittoria Calzaddos" />
           </div>
           <div class="carousel-item" data-bs-interval="1800">
-            <img src="img/carrousel_2.jpg" class="d-block w-100 img-fluid" alt="Zapatos - Vittoria Calzaddos" />
+            <img src="img/carrousel_2.png" class="d-block w-100 img-fluid" alt="Zapatos - Vittoria Calzaddos" />
           </div>
           <div class="carousel-item" data-bs-interval="1800"> 
-            <img src="img/carrousel_3.jpg" class="d-block w-100 img-fluid" alt="Zapatos - Vittoria Calzaddos" />
+            <img src="img/carrousel_3.png" class="d-block w-100 img-fluid" alt="Zapatos - Vittoria Calzaddos" />
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -108,7 +108,7 @@
         <h2 class="pt-5 text-center title-products">Nuevos Productos</h2>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-1.jpg" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card-1.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 9074</p>
             </div>
@@ -116,7 +116,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-1.jpg" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card-1.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 9074</p>
             </div>
@@ -124,7 +124,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-1.jpg" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card-1.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 9074</p>
             </div>
@@ -132,7 +132,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-1.jpg" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card-1.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 9074</p>
             </div>
@@ -140,7 +140,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-1.jpg" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card-1.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 9074</p>
             </div>
@@ -148,7 +148,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-1.jpg" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card-1.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 9074</p>
             </div>
@@ -167,7 +167,7 @@
             nihil?</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 about-us">
-            <img src="img/bio.jpg" data-aos="zoom-in" data-aos-duration="3000"
+            <img src="img/bio_1.png" data-aos="zoom-in" data-aos-duration="3000"
               class="img-animation-1 img-fluid img-thumbnail mx-auto d-block shadow" alt="Vittoria Calzados">
         </div>
       </div>
