Imagenes de las card arregladas

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-2.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card_2.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 5124</p>
             </div>
@@ -124,7 +124,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-3.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card_3.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 2830</p>
             </div>
@@ -132,7 +132,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-4.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card_4.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 1200</p>
             </div>
@@ -140,7 +140,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-5.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card_5.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 3520</p>
             </div>
@@ -148,7 +148,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-6.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+            <img src="img/card_6.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 974</p>
             </div>
