Cards arregladas, con sus imagenes

--- a/index.html
+++ b/index.html
@@ -107,48 +107,48 @@
       <div class="row pt-5">
         <h2 class="pt-5 text-center title-products">Nuevos Productos</h2>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
-          <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card-1.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+          <div class="card shadow" data-aos="fade-up" style="width: 19rem">
+           <img src="img/card_1.webp" alt="Zapatos - Vittoria Calzados">
             <div class="card-body">
               <p class="card-text text-center">Articulo 9074</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
-          <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card_2.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+          <div class="card shadow" data-aos="fade-up" style="width: 19rem">
+            <img src="img/card_2.webp" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 5124</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
-          <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card_3.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+          <div class="card shadow" data-aos="fade-up" style="width: 19rem">
+            <img src="img/card_3.webp" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 2830</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
-          <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card_4.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+          <div class="card shadow" data-aos="fade-up" style="width: 19rem">
+            <img src="img/card_4.webp" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 1200</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
-          <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card_5.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+          <div class="card shadow" data-aos="fade-up" style="width: 19rem">
+            <img src="img/card_5.webp" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 3520</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
-          <div class="card shadow" data-aos="fade-up" style="width: 18rem">
-            <img src="img/card_6.png" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
+          <div class="card shadow" data-aos="fade-up" style="width: 19rem">
+            <img src="img/card_6.webp" class="card-img-top" alt="Zapatos - Vittoria Calzados" />
             <div class="card-body">
               <p class="card-text text-center">Articulo 974</p>
             </div>
