--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="carousel-item" data-bs-interval="1800">
             <img src="img/carrousel_2.png" class="d-block w-100 img-fluid" alt="Zapatos - Vittoria Calzaddos" />
           </div>
-          <div class="carousel-item" data-bs-interval="1800"> 
+          <div class="carousel-item" data-bs-interval="1800">
             <img src="img/carrousel_3.png" class="d-block w-100 img-fluid" alt="Zapatos - Vittoria Calzaddos" />
           </div>
         </div>
@@ -108,7 +108,7 @@
         <h2 class="pt-5 text-center title-products">Nuevos Productos</h2>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
           <div class="card shadow" data-aos="fade-up" style="width: 19rem">
-           <img src="img/card_1.webp" alt="Zapatos - Vittoria Calzados">
+            <img src="img/card_1.webp" alt="Zapatos - Vittoria Calzados">
             <div class="card-body">
               <p class="card-text text-center">Articulo 9074</p>
             </div>
@@ -162,13 +162,13 @@
       <h2 class="pt-5 text-center">Sobre Nosotros</h2>
       <div class="row pt-5 align-items-center">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim obcaecati earum non aut
-            nostrum, vero expedita. Beatae culpa excepturi tempore illum eius commodi id, corrupti eum! Quaerat sit illo
-            nihil?</p>
+          <p class="text-center">Somos una zapatería ubicada en CABA. Nos dedicamos a la venta de todo tipo de calzado,
+            desde niños a adultos. Realizamos ventas por mayor y tenemos catálogo. Para más preguntas no dudes en
+            contactarnos por nuestras redes. </p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 about-us">
-            <img src="img/bio_1.png" data-aos="zoom-in" data-aos-duration="3000"
-              class="img-animation-1 img-fluid img-thumbnail mx-auto d-block shadow" alt="Vittoria Calzados">
+          <img src="img/bio_1.png" data-aos="zoom-in" data-aos-duration="3000"
+            class="img-animation-1 img-fluid img-thumbnail mx-auto d-block shadow" alt="Vittoria Calzados">
         </div>
       </div>
     </section>
@@ -178,50 +178,57 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 pt-5 pt-sm-3 border-bottom border-start">
           <form method="POST" action="enviar.php">
-          <div class="form-floating mb-3 shadow">
-            <input type="text" name="nombre" class="form-control" id="floatingInput" placeholder="Nombre" maxlength="40">
-            <label for="floatingInput">Nombre y Apellido</label>
-          </div>
-          <div class="form-floating shadow">
-            <input type="email" name="email" class="form-control" id="floatingPassword" placeholder="Correo" maxlength="50">
-            <label for="floatingPassword">Correo Electronico</label>
-          </div>
-          <div class="form-floating mt-3 shadow">
-            <textarea class="form-control" name="mensaje" id="floatingTextarea" maxlength="300"
-              style="height: 150px; min-height: 150px; max-height: 200px;"></textarea>
-            <label for="floatingTextarea">Mensaje</label>
-          </div>
-          <button type="submit" class="btn btn-outline-dark mt-3 mb-3 shadow">Enviar</button>
-        </form>
+            <div class="form-floating mb-3 shadow">
+              <input type="text" name="nombre" required autocomplete="off" class="form-control" id="floatingInput"
+                placeholder="Nombre" maxlength="40">
+              <label for="floatingInput">Nombre y Apellido</label>
+            </div>
+            <div class="form-floating shadow">
+              <input type="email" name="email" required class="form-control" id="floatingEmail" placeholder="Correo"
+                maxlength="50">
+              <label for="floatingEmail">Correo Electronico</label>
+            </div>
+            <div class="form-floating shadow mt-3">
+              <input type="text" name="asunto" required autocomplete="off" class="form-control" id="floatingAsunt"
+                placeholder="Correo" maxlength="50">
+              <label for="floatingAsunt">Asunto</label>
+            </div>
+            <div class="form-floating mt-3 shadow">
+              <textarea class="form-control" required autocomplete="off" name="mensaje" id="floatingTextarea"
+                maxlength="300" style="height: 150px; min-height: 150px; max-height: 200px;"></textarea>
+              <label for="floatingTextarea">Mensaje</label>
+            </div>
+            <button type="submit" class="btn btn-outline-dark mt-3 mb-3 shadow">Enviar</button>
+          </form>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9392885840566!2d-58.40569208477032!3d-34.605696680458934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaed04b92b07%3A0x39b16d1dd2f33dec!2sPaso%20341%2C%20C1046%20CABA!5e0!3m2!1ses!2sar!4v1625682600237!5m2!1ses!2sar"
-            width="600" height="450" allowfullscreen="" loading="lazy"
-            class="map ratio ratio-4x3 shadow border rounded" title="Mapa de la ubicacion de Vittoria Calzados"></iframe>
+            width="600" height="450" allowfullscreen="" loading="lazy" class="map ratio ratio-4x3 shadow border rounded"
+            title="Mapa de la ubicacion de Vittoria Calzados"></iframe>
         </div>
+      </div>
+    </section>
+    <section class="container pt-5" id="scroll-5">
+      <h2 class="text-center pb-5">Preguntas Frecuentes</h2>
+      <div class="row faqs overflow-hidden">
+        <div data-aos="fade-right" class="col-lg-12 col-md-12 col-sm 12 card mb-5 shadow">
+          <p class="pregunta">¿Son fabricantes?</p>
+          <p class="respuesta">Si, somos fabricantes!</p>
         </div>
-      </section>
-            <section class="container pt-5" id="scroll-5">
-            <h2 class="text-center pb-5">Preguntas Frecuentes</h2>
-            <div class="row faqs overflow-hidden">
-              <div data-aos="fade-right" class="col-lg-12 col-md-12 col-sm 12 card mb-5 shadow">
-                <p class="pregunta">¿Son fabricantes?</p>
-                <p class="respuesta">Si, somos fabricantes!</p>
-              </div>
-              <div data-aos="fade-left" class="col-lg-12 col-md-12 col-sm-12 card mb-5 shadow text-end">
-                <p class="pregunta">¿Venden por mayor?</p>
-                <p class="respuesta">Si! Realizamos ventas por mayor</p>
-              </div>
-              <div data-aos="fade-right" class="col-lg-12 col-md-12 col-sm-12 card mb-5 shadow">
-                <p class="pregunta">¿Realizan envios al interior?</p>
-                <p class="respuesta">Si! realizamos</p>
-              </div>
-              <div data-aos="fade-left" class="col-lg-12 col-md-12 col-sm-12 card mb-5 shadow text-end">
-                <p class="pregunta">¿Tienen catalogo?</p>
-                <p class="respuesta">Si, pedinoslo vía WhatsApp</p>
-              </div>
-            </div>
+        <div data-aos="fade-left" class="col-lg-12 col-md-12 col-sm-12 card mb-5 shadow text-end">
+          <p class="pregunta">¿Venden por mayor?</p>
+          <p class="respuesta">Si! Realizamos ventas por mayor</p>
+        </div>
+        <div data-aos="fade-right" class="col-lg-12 col-md-12 col-sm-12 card mb-5 shadow">
+          <p class="pregunta">¿Realizan envios al interior?</p>
+          <p class="respuesta">Si! realizamos</p>
+        </div>
+        <div data-aos="fade-left" class="col-lg-12 col-md-12 col-sm-12 card mb-5 shadow text-end">
+          <p class="pregunta">¿Tienen catalogo?</p>
+          <p class="respuesta">Si, pedinoslo vía WhatsApp</p>
+        </div>
+      </div>
     </section>
   </main>
 
@@ -254,11 +261,12 @@
             </li>
           </ul>
 
-          <div class="container-fluid justify-content-lg-center justify-content-md-center col-lg-12 col-md-12 col-sm-12 text-center align-items-center copy">
-            <span class="text-center copy-text">Hecho por Alan Luna con  <button type="button" class="btn-outline-danger" data-bs-toggle="modal"
-              data-bs-target="#staticBackdrop">
-              <span class="corazon">❤️</span>
-            </button> - Todos los Derechos Reservados <b>&copy;</b></span>
+          <div
+            class="container-fluid justify-content-lg-center justify-content-md-center col-lg-12 col-md-12 col-sm-12 text-center align-items-center copy">
+            <span class="text-center copy-text">Hecho por Alan Luna con <button type="button" class="btn-outline-danger"
+                data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                <span class="corazon">❤️</span>
+              </button> - Todos los Derechos Reservados <b>&copy;</b></span>
           </div>
 
 
@@ -288,7 +296,7 @@
   </footer>
 
   <div class="whatsapp">
-    <a href="https://web.whatsapp.com/"> 
+    <a href="https://web.whatsapp.com/">
       <img src="img/whatsapp.png" alt="">
     </a>
   </div>
