--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+  <!-- HEADER    -->
   <header>
     <nav class="navbar fixed-top navbar-expand-lg static-top">
       <div class="container-fluid">
@@ -65,7 +66,10 @@
       </div>
     </nav>
   </header>
+  <!-- FIN HEADER  -->
+  <!-- MAIN  -->
   <main>
+    <!-- CAROUSEL  -->
     <div class="container-fluid" style="padding-left: 0; padding-right: 0" id="scroll-1">
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -77,9 +81,7 @@
             aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner carousel">
-          <h1 class="text-over-slide d-none d-lg-block">Vittoria Calzados</h1>
-          <h2 class="text-over-slide-md d-lg-none d-sm-none d-none d-md-block">Vittoria Calzados</h2>
-          <h2 class="text-over-slide-mob d-sm-block d-md-none d-lg-none">Vittoria Calzados</h2>
+          <h1 class="text-over-slide d-block">Vittoria Calzados</h1>
           <div class="carousel-item active" data-bs-interval="1800">
             <img src="img/carrousel_1.png" class="d-block w-100 img-fluid" alt="Zapatos - Vittoria Calzaddos" />
           </div>
@@ -102,7 +104,8 @@
         </button>
       </div>
     </div>
-
+    <!-- FIN CAROUSEL -->
+    <!-- PRODUCTOS  -->
     <div class="container cards" id="scroll-2">
       <div class="row pt-5">
         <h2 class="pt-5 text-center title-products">Nuevos Productos</h2>
@@ -157,7 +160,8 @@
       </div>
     </div>
     </div>
-
+    <!-- FIN DE PRODUCTOS  -->
+    <!-- NOSOTROS  -->
     <section class="container" id="scroll-3">
       <h2 class="pt-5 text-center">Sobre Nosotros</h2>
       <div class="row pt-5 align-items-center">
@@ -172,7 +176,8 @@
         </div>
       </div>
     </section>
-
+    <!-- FIN NOSOTROS  -->
+    <!-- CONTACTO  -->
     <section class="container pt-5 pt-sm-2" id="scroll-4">
       <h2 class="text-center pt-lg-5 pb-lg-5">Contacto</h2>
       <div class="row">
@@ -209,6 +214,8 @@
         </div>
       </div>
     </section>
+    <!-- FIN CONTACTO  -->
+    <!-- INICIO FAQS  -->
     <section class="container pt-5" id="scroll-5">
       <h2 class="text-center pb-5">Preguntas Frecuentes</h2>
       <div class="row faqs overflow-hidden">
@@ -230,12 +237,15 @@
         </div>
       </div>
     </section>
+    <!-- FIN FAQS  -->
   </main>
-
-  <footer>
+  <!-- FIN MAIN -->
+  <!-- FOOTER -->
+  <footer>  
+    <!-- NAVBAR FOOTER -->
     <section class="container-fluid pt-5 pb-3">
       <div class="row">
-        <div class="col-12 card shadow">
+        <div class="col-12 card shadow navbar-footer-container">
           <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link link-footer" href="#scroll-1">Inicio</a>
@@ -260,7 +270,8 @@
               </a>
             </li>
           </ul>
-
+          <!-- FIN NAVBAR FOOTER -->
+          <!-- INICIO COPY CON MODAL  -->
           <div
             class="container-fluid justify-content-lg-center justify-content-md-center col-lg-12 col-md-12 col-sm-12 text-center align-items-center copy">
             <span class="text-center copy-text">Hecho por Alan Luna con <button type="button" class="btn-outline-danger"
@@ -292,14 +303,17 @@
           </div>
         </div>
       </div>
+      <!-- FIN COPY CON MODAL  -->
     </section>
   </footer>
-
+  <!-- FIN FOOTER -->
+  <!-- INICIO BOTON WhatsApp  -->
   <div class="whatsapp">
     <a href="https://web.whatsapp.com/">
       <img src="img/whatsapp.png" alt="">
     </a>
   </div>
+  <!-- FIN BOTON WhatsApp  -->
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
