cambio faqs width

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <header>
     <nav class="navbar fixed-top navbar-expand-lg static-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">VITTORIA</a>
+        <a class="navbar-brand" href="index.html">VITTORIA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -47,19 +47,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#scroll-1">Inicio</a>
+              <a class="nav-link active" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#scroll-2">Productos</a>
+              <a class="nav-link" href="#productos">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#scroll-3">Nosotros</a>
+              <a class="nav-link" href="#nosotros">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#scroll-4">Contacto</a>
+              <a class="nav-link" href="#contacto">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#scroll-5">Faqs</a>
+              <a class="nav-link" href="#faqs">Faqs</a>
             </li>
           </ul>
         </div>
@@ -70,7 +70,7 @@
   <!-- MAIN  -->
   <main>
     <!-- CAROUSEL  -->
-    <div class="container-fluid" style="padding-left: 0; padding-right: 0" id="scroll-1">
+    <div class="container-fluid" style="padding-left: 0; padding-right: 0">
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -106,7 +106,7 @@
     </div>
     <!-- FIN CAROUSEL -->
     <!-- PRODUCTOS  -->
-    <div class="container cards" id="scroll-2">
+    <div class="container cards" id="productos">
       <div class="row pt-5">
         <h2 class="pt-5 text-center title-products">Nuevos Productos</h2>
         <div class="col-lg-4 col-md-6 col-sm-6 pt-5 card-container">
@@ -162,7 +162,7 @@
     </div>
     <!-- FIN DE PRODUCTOS  -->
     <!-- NOSOTROS  -->
-    <section class="container" id="scroll-3">
+    <section class="container" id="nosotros">
       <h2 class="pt-5 text-center">Sobre Nosotros</h2>
       <div class="row pt-5 align-items-center">
         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -171,14 +171,14 @@
             contactarnos por nuestras redes. </p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 about-us">
-          <img src="img/bio_1.png" data-aos="zoom-in" data-aos-duration="3000"
+          <img src="img/bio_1.png" data-aos="zoom-in" data-aos-duration="2000"
             class="img-animation-1 img-fluid img-thumbnail mx-auto d-block shadow" alt="Vittoria Calzados">
         </div>
       </div>
     </section>
     <!-- FIN NOSOTROS  -->
     <!-- CONTACTO  -->
-    <section class="container pt-5 pt-sm-2" id="scroll-4">
+    <section class="container pt-5 pt-sm-2" id="contacto">
       <h2 class="text-center pt-lg-5 pb-lg-5">Contacto</h2>
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 pt-5 pt-sm-3 border-bottom border-start">
@@ -216,7 +216,7 @@
     </section>
     <!-- FIN CONTACTO  -->
     <!-- INICIO FAQS  -->
-    <section class="container pt-5" id="scroll-5">
+    <section class="container pt-5" id="faqs">
       <h2 class="text-center pb-5">Preguntas Frecuentes</h2>
       <div class="row faqs overflow-hidden">
         <div data-aos="fade-right" class="col-lg-12 col-md-12 col-sm 12 card mb-5 shadow">
@@ -248,16 +248,16 @@
         <div class="col-12 card shadow navbar-footer-container">
           <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link link-footer" href="#scroll-1">Inicio</a>
+              <a class="nav-link link-footer" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#scroll-2">Productos</a>
+              <a class="nav-link" href="#productos">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#scroll-3">Nosotros</a>
+              <a class="nav-link" href="#nosotros">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#scroll-4">Contacto</a>
+              <a class="nav-link" href="#contacto">Contacto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link ig" href="https://www.instagram.com/vittoriacalzados/" target="_blanck">
@@ -277,7 +277,7 @@
             <span class="text-center copy-text">Hecho por Alan Luna con <button type="button" class="btn-outline-danger"
                 data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                 <span class="corazon">❤️</span>
-              </button> - Todos los Derechos Reservados <b>&copy;</b></span>
+              </button> - Todos los Derechos Reservados &copy;</span>
           </div>
 
 
